--- a/environment.yml
+++ b/environment.yml
@@ -1,66 +1,88 @@
 name: IEA
 channels:
-  - anaconda
+  - pytorch
+  - intel
   - conda-forge
+  - anaconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
   - argon2-cffi=21.3.0=pyhd3eb1b0_0
-  - argon2-cffi-bindings=21.2.0=py310h7f8727e_0
+  - argon2-cffi-bindings=21.2.0=py37h7f8727e_0
   - astor=0.8.1=pyh9f0ad1d_0
-  - asttokens=2.0.5=pyhd3eb1b0_0
   - attrs=21.4.0=pyhd3eb1b0_0
   - autograd=1.4=pyhd8ed1ab_0
   - autograd-gamma=0.5.0=pyh9f0ad1d_0
   - backcall=0.2.0=pyhd3eb1b0_0
-  - beautifulsoup4=4.11.1=py310h06a4308_0
+  - beautifulsoup4=4.11.1=py37h06a4308_0
   - blas=1.0=mkl
   - bleach=4.1.0=pyhd3eb1b0_0
-  - bottleneck=1.3.4=py310h9102076_0
+  - bottleneck=1.3.4=py37hce1f21e_0
   - brotli=1.0.9=h166bdaf_7
   - brotli-bin=1.0.9=h166bdaf_7
+  - brotlipy=0.7.0=py37h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2022.6.15=ha878542_0
-  - certifi=2022.6.15=py310hff52083_0
-  - cffi=1.15.0=py310hd667e15_1
+  - certifi=2022.6.15=py37h06a4308_0
+  - cffi=1.15.0=py37hd667e15_1
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - common_cmplr_lib_rt=2021.4.0=intel_3561
+  - common_cmplr_lic_rt=2021.4.0=intel_3561
+  - cryptography=37.0.1=py37h9ce1e76_0
+  - cudatoolkit=11.3.1=h2bc3f7f_2
   - cycler=0.11.0=pyhd8ed1ab_0
+  - daal4py=2021.6.0=py37_intel_915
+  - dal=2021.6.0=intel_915
   - dbus=1.13.18=hb2f20db_0
-  - debugpy=1.5.1=py310h295c915_0
+  - debugpy=1.5.1=py37h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
-  - entrypoints=0.4=py310h06a4308_0
-  - executing=0.8.3=pyhd3eb1b0_0
+  - dpcpp_cpp_rt=2021.2.0=intel_610
+  - entrypoints=0.4=py37h06a4308_0
   - expat=2.4.4=h295c915_0
+  - ffmpeg=4.3=hf484d3e_0
   - fontconfig=2.13.1=h6c09931_0
-  - fonttools=4.33.3=py310h5764c6d_0
+  - fonttools=4.25.0=pyhd3eb1b0_0
   - formulaic=0.3.4=pyhd8ed1ab_0
   - freetype=2.11.0=h70c0345_0
-  - future=0.18.2=py310h06a4308_1
-  - giflib=5.2.1=h36c2ea0_2
-  - glib=2.69.1=h4ff587b_1
-  - gst-plugins-base=1.14.0=h8213a91_2
-  - gstreamer=1.14.0=h28cd5cc_2
+  - future=0.18.2=py37h89c1867_5
+  - giflib=5.2.1=h7b6447c_0
+  - glib=2.56.2=hd408876_0
+  - gmp=6.2.1=h295c915_3
+  - gnutls=3.6.15=he1e5248_0
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
+  - icc_rt=2021.2.0=intel_610
   - icu=58.2=he6710b0_3
+  - idna=3.3=pyhd3eb1b0_0
+  - importlib-metadata=4.11.3=py37h06a4308_0
+  - importlib_metadata=4.11.3=hd3eb1b0_0
+  - importlib_resources=5.2.0=pyhd3eb1b0_1
+  - intel-cmplr-lib-rt=2022.1.0=intel_3768
+  - intel-cmplr-lic-rt=2022.1.0=intel_3768
+  - intel-opencl-rt=2022.1.0=intel_3768
   - intel-openmp=2021.4.0=h06a4308_3561
+  - intelpython=2022.1.0=0
   - interface_meta=1.3.0=pyhd8ed1ab_0
-  - ipykernel=6.9.1=py310h06a4308_0
-  - ipython=8.3.0=py310h06a4308_0
+  - ipykernel=6.9.1=py37h06a4308_0
+  - ipython=7.31.1=py37h06a4308_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - ipywidgets=7.6.5=pyhd3eb1b0_1
-  - jedi=0.18.1=py310h06a4308_1
+  - jedi=0.18.1=py37h06a4308_1
   - jinja2=3.0.3=pyhd3eb1b0_0
-  - joblib=1.1.0=pyhd3eb1b0_0
+  - joblib=1.0.1=py37h3f38642_0
   - jpeg=9e=h7f8727e_0
-  - jsonschema=4.4.0=py310h06a4308_0
-  - jupyter=1.0.0=py310h06a4308_7
-  - jupyter_client=7.2.2=py310h06a4308_0
+  - jsonschema=4.4.0=py37h06a4308_0
+  - jupyter=1.0.0=py37_7
+  - jupyter_client=7.2.2=py37h06a4308_0
   - jupyter_console=6.4.3=pyhd3eb1b0_0
-  - jupyter_core=4.10.0=py310h06a4308_0
+  - jupyter_core=4.10.0=py37h06a4308_0
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
-  - kiwisolver=1.4.2=py310h295c915_0
-  - lcms2=2.12=hddcbb42_0
+  - kiwisolver=1.4.2=py37h295c915_0
+  - lame=3.100=h7b6447c_0
+  - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libbrotlicommon=1.0.9=h166bdaf_7
   - libbrotlidec=1.0.9=h166bdaf_7
@@ -70,99 +92,114 @@ dependencies:
   - libgfortran-ng=7.5.0=ha8ba4b0_17
   - libgfortran4=7.5.0=ha8ba4b0_17
   - libgomp=11.2.0=h1234567_1
+  - libiconv=1.16=h7f8727e_2
+  - libidn2=2.3.2=h7f8727e_0
   - libpng=1.6.37=hbc83047_0
   - libsodium=1.0.18=h7b6447c_0
   - libstdcxx-ng=11.2.0=h1234567_1
-  - libtiff=4.2.0=h85742a9_0
+  - libtasn1=4.16.0=h27cfd23_0
+  - libtiff=4.2.0=h2818925_1
+  - libunistring=0.9.10=h27cfd23_0
   - libuuid=1.0.3=h7f8727e_2
+  - libuv=1.40.0=h7b6447c_0
   - libwebp=1.2.2=h55f646e_0
-  - libwebp-base=1.2.2=h7f98852_1
+  - libwebp-base=1.2.2=h7f8727e_0
   - libxcb=1.15=h7f8727e_0
   - libxml2=2.9.14=h74e7548_0
   - lifelines=0.27.1=pyhd8ed1ab_0
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - markupsafe=2.1.1=py310h7f8727e_0
-  - matplotlib=3.5.2=py310hff52083_0
-  - matplotlib-base=3.5.2=py310h5701ce4_0
+  - lz4-c=1.9.3=h295c915_1
+  - markupsafe=2.1.1=py37h7f8727e_0
+  - matplotlib=3.5.2=py37h89c1867_0
+  - matplotlib-base=3.5.2=py37hc347a89_0
   - matplotlib-inline=0.1.2=pyhd3eb1b0_2
-  - mistune=0.8.4=py310h7f8727e_1000
+  - mistune=0.8.4=py37h14c3975_1001
   - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py310h7f8727e_0
-  - mkl_fft=1.3.1=py310hd6ae3a3_0
-  - mkl_random=1.2.2=py310h00e6091_0
+  - mkl-service=2.4.0=py37h7f8727e_0
+  - mkl_fft=1.3.1=py37hd3c417c_0
+  - mkl_random=1.2.2=py37h51133e4_0
   - monai=0.9.0=pyhd8ed1ab_0
   - munkres=1.1.4=pyh9f0ad1d_0
-  - nbclient=0.5.13=py310h06a4308_0
-  - nbconvert=6.4.4=py310h06a4308_0
-  - nbformat=5.3.0=py310h06a4308_0
-  - ncurses=6.3=h7f8727e_2
-  - nest-asyncio=1.5.5=py310h06a4308_0
+  - nbclient=0.5.13=py37h06a4308_0
+  - nbconvert=6.4.4=py37h06a4308_0
+  - nbformat=5.3.0=py37h06a4308_0
+  - ncurses=6.3=h5eee18b_3
+  - nest-asyncio=1.5.5=py37h06a4308_0
+  - nettle=3.7.3=hbbd107a_1
   - ninja=1.10.2=h06a4308_5
   - ninja-base=1.10.2=hd09550d_5
-  - notebook=6.4.11=py310h06a4308_0
-  - numexpr=2.8.3=py310hcea2de6_0
-  - numpy=1.22.3=py310hfa59a62_0
-  - numpy-base=1.22.3=py310h9585f30_0
+  - notebook=6.4.11=py37h06a4308_0
+  - numexpr=2.8.3=py37h807cd23_0
+  - numpy=1.21.5=py37h6c91a56_3
+  - numpy-base=1.21.5=py37ha15fc14_3
+  - opencl_rt=2021.4.0=intel_3561
+  - openh264=2.1.1=h4ff587b_0
   - openssl=1.1.1p=h5eee18b_0
   - packaging=21.3=pyhd3eb1b0_0
-  - pandas=1.4.2=py310h295c915_0
+  - pandas=1.3.5=py37h8c16a72_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
   - patsy=0.5.2=pyhd8ed1ab_0
   - pcre=8.45=h295c915_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=9.0.1=py310h22f2fdc_0
-  - pip=21.2.4=py310h06a4308_0
+  - pillow=9.0.1=py37h22f2fdc_0
+  - pip=21.2.2=py37h06a4308_0
   - prometheus_client=0.13.1=pyhd3eb1b0_0
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
   - prompt_toolkit=3.0.20=hd3eb1b0_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.11.2=pyhd3eb1b0_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.4=pyhd3eb1b0_0
-  - pyqt=5.9.2=py310h295c915_6
-  - pyrsistent=0.18.0=py310h7f8727e_0
-  - python=3.10.4=h12debd9_0
+  - pyqt=5.9.2=py37h22d08a2_1
+  - pyrsistent=0.18.0=py37heee7806_0
+  - pysocks=1.7.1=py37_1
+  - python=3.7.13=h12debd9_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.15.1=pyhd3eb1b0_0
-  - python_abi=3.10=2_cp310
-  - pytorch=1.10.2=cpu_py310h6894f24_0
-  - pytz=2022.1=py310h06a4308_0
-  - pyzmq=22.3.0=py310h295c915_2
+  - python_abi=3.7=2_cp37m
+  - pytorch=1.11.0=py3.7_cuda11.3_cudnn8.2.0_0
+  - pytorch-mutex=1.0=cuda
+  - pytz=2022.1=py37h06a4308_0
+  - pyzmq=22.3.0=py37h295c915_2
   - qt=5.9.7=h5867ecd_1
   - qtconsole=5.3.0=pyhd3eb1b0_0
   - qtpy=2.0.1=pyhd3eb1b0_0
   - readline=8.1.2=h7f8727e_1
-  - scikit-learn=1.0.1=py310h00e6091_0
-  - scipy=1.7.3=py310hfa59a62_0
+  - requests=2.28.0=py37h06a4308_0
+  - scikit-learn=0.24.2=py37h8411759_4
+  - scikit-learn-intelex=2021.6.0=py37_intel_915
+  - scipy=1.7.3=py37hc147768_0
   - seaborn=0.11.2=pyhd3eb1b0_0
   - send2trash=1.8.0=pyhd3eb1b0_1
-  - setuptools=61.2.0=py310h06a4308_0
-  - sip=4.19.13=py310h295c915_0
+  - setuptools=61.2.0=py37h06a4308_0
+  - sip=6.5.1=py37h295c915_0
   - six=1.16.0=pyhd3eb1b0_1
   - soupsieve=2.3.1=pyhd3eb1b0_0
   - sqlite=3.38.5=hc218d9a_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - statsmodels=0.13.2=py310h96516ba_0
-  - terminado=0.13.1=py310h06a4308_0
-  - testpath=0.6.0=py310h06a4308_0
+  - statsmodels=0.13.2=py37hb1e94ed_0
+  - tbb=2021.6.0=intel_835
+  - terminado=0.13.1=py37h06a4308_0
+  - testpath=0.6.0=py37h06a4308_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.12=h1ccaba5_0
-  - tornado=6.1=py310h7f8727e_0
+  - toml=0.10.2=pyhd3eb1b0_0
+  - torchaudio=0.11.0=py37_cu113
+  - torchvision=0.12.0=py37_cu113
+  - tornado=6.1=py37h27cfd23_0
   - traitlets=5.1.1=pyhd3eb1b0_0
   - typing-extensions=4.1.1=hd3eb1b0_0
   - typing_extensions=4.1.1=pyh06a4308_0
-  - tzdata=2022a=hda174b7_0
-  - unicodedata2=14.0.0=py310h5764c6d_1
+  - urllib3=1.26.9=py37h06a4308_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
-  - webencodings=0.5.1=py310h06a4308_1
+  - webencodings=0.5.1=py37_1
   - wheel=0.37.1=pyhd3eb1b0_0
-  - widgetsnbextension=3.5.2=py310h06a4308_0
-  - wrapt=1.14.1=py310h5764c6d_0
+  - widgetsnbextension=3.5.2=py37h06a4308_0
+  - wrapt=1.14.1=py37h540881e_0
   - xz=5.2.5=h7f8727e_1
   - zeromq=4.3.4=h2531618_0
+  - zipp=3.8.0=py37h06a4308_0
   - zlib=1.2.12=h7f8727e_2
-  - zstd=1.4.9=ha95c52a_0
+  - zstd=1.5.2=ha4553b6_0
 prefix: /ocean/projects/asc170022p/juc91/anaconda/envs/IEA
